updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p> I was in the Navy for 6 years as a Fire Controlman and was in charge of maintaining and operating CIWS on FFG-42 USS Klakring. I've traveled all around Europe and South America and am tired of the ocean so don't ask me to go on a cruise because I will decline faster than you can ask me. After the military I went to school to become an Xray Tech, and worked fulltime doing that for a little over 3 years. I have 4 amazing crazy kids, 3 girls and 1 boy. I'm going on 12 years being married to my amazing and supporting wife. We have 1 dog named Bentley, who is 11 and just as crazy as my kids.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Phoenix, Az</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing/getting beat up by my kids, playing online games with friends even though we stink, and driving my wife crazy.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>That is still up in the air for me</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Phoenix, Az</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The ability to create and tinker is what has brought me here, as well as being able to support my family and getting out of the medical field.</p>
     </section>
 
     <footer id="footer">
